# aiocentriconnect

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
aiocentriconnect/: __init__.py  api.py  centriconnect.py  exceptions.py  tank.py  types.py
examples/: simple.py
tests/: test_centriconnect.py
